--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
+appdirs==1.4.4
 asgiref==3.2.7
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.6
 django-heroku==0.3.1
 gunicorn==20.0.4
+h5py==2.10.0
 idna==2.9
+lxml==4.5.1
+numpy==1.18.4
 pytz==2020.1
 requests==2.23.0
+requests-file==1.5.1
+six==1.14.0
+soupsieve==2.0.1
 sqlparse==0.3.1
+tldextract==2.2.2
+uritools==3.0.0
+urlextract==0.14.0
 urllib3==1.25.9
 whitenoise==5.0.1
 psycopg2==2.8.5
